--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             d="M384 320H256c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h128c17.67 0 32-14.33 32-32V352c0-17.67-14.33-32-32-32zM192 32c0-17.67-14.33-32-32-32H32C14.33 0 0 14.33 0 32v128c0 17.67 14.33 32 32 32h95.72l73.16 128.04C211.98 300.98 232.4 288 256 288h.28L192 175.51V128h224V64H192V32zM608 0H480c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h128c17.67 0 32-14.33 32-32V32c0-17.67-14.33-32-32-32z">
                         </path>
                     </svg><span class="link-text">Services</span></a></li>
-            <li class="nav-item"><a href="" class="nav-link"> <svg aria-hidden="true" focusable="false"
+            <li class="nav-item"><a href="./contact.html" class="nav-link"> <svg aria-hidden="true" focusable="false"
                         data-prefix="far" data-icon="address-card" class="svg-inline--fa fa-address-card fa-w-18"
                         role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                         <path fill="currentColor"
@@ -159,7 +159,8 @@
                 </a>
 
             </div>
-        </div>
+        </div> <!-- this is teh gallery container-->
+
     </main>
 
 </body>
