added loging/sign up button and role based content

--- a/index.html
+++ b/index.html
@@ -7,12 +7,42 @@
     <title>Erik Solveson</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/scrollbar.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Bangers&family=Press+Start+2P&display=swap"
         rel="stylesheet">
+    <style>
+        .user-info {
+            align-items: center;
+            display: grid;
+            gap: 1rem;
+            grid-template-columns: repeat(2, 1fr);
+            list-style: none;
+            padding: 0;
+        }
+
+        .user-info button {
+            background: var(--dark-gray);
+            border: 0;
+            border-radius: 0.5rem;
+            color: var(--white);
+            display: block;
+            font-family: var(--font-family);
+            font-size: 1.5rem;
+            font-weight: 900;
+            padding: 1rem;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        #left,
+        #right {
+            background-color: navy;
+            border: black;
+            color: blanchedalmond;
+        }
+    </style>
 </head>
 
 <body>
@@ -72,7 +102,7 @@
         <h2>Freelance Web Designer & Developer based in Missoula, MT</h2>
     </header>
 
-    <nav>
+    <!-- <nav>
         <ul class="nav-list">
             <li class="logo">
                 <p>Erik Solveson</p>
@@ -107,9 +137,13 @@
                     </svg> <span class="link-text">Mountains</span></a></li>
         </ul>
 
-    </nav>
+    </nav> -->
     <main>
-        <h2>Projects:</h2>
+        <div class="user-info">
+            <button id="left">Log In</button>
+            <button id="right">Sign Up</button>
+        </div>
+        <!-- <h2>Projects:</h2>
         <div class="gallery-container">
             <div class="gallery-item">
                 <a href=""><img src="https://picsum.photos/200/300" alt="">
@@ -159,8 +193,62 @@
                 </a>
 
             </div>
-        </div> <!-- this is teh gallery container-->
+        </div> this is teh gallery container -->
+        <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+        <script>
+            const button1 = document.getElementById('left');
+            const button2 = document.getElementById('right');
+
+            const login = () => netlifyIdentity.open('login');
+            const signup = () => netlifyIdentity.open('signup');
+
+            // by default, add login and signup functionality
+            button1.addEventListener('click', login);
+            button2.addEventListener('click', signup);
+
+            const updateUserInfo = (user) => {
+                const container = document.querySelector('.user-info');
+
+                // cloning the buttons removes existing event listeners
+                const b1 = button1.cloneNode(true);
+                const b2 = button2.cloneNode(true);
+
+                // empty the user info div
+                container.innerHTML = '';
+
+                if (user) {
+                    b1.innerText = 'Log Out';
+                    b1.addEventListener('click', () => {
+                        netlifyIdentity.logout();
+                    });
+
+                    b2.innerText = 'Manage Subscription';
+                    b2.addEventListener('click', () => {
+                        // TODO handle subscription management
+                    });
+                } else {
+                    // if no one is logged in, show login/signup options
+                    b1.innerText = 'Log In';
+                    b1.addEventListener('click', login);
+
+                    b2.innerText = 'Sign Up';
+                    b2.addEventListener('click', signup);
+                }
+
+                // add the updated buttons back to the user info div
+                container.appendChild(b1);
+                container.appendChild(b2);
+            };
+
+            const handleUserStateChange = (user) => {
+                updateUserInfo(user);
+            };
+
+            netlifyIdentity.on('init', handleUserStateChange);
+            netlifyIdentity.on('login', handleUserStateChange);
+            netlifyIdentity.on('logout', handleUserStateChange);
+        </script>
     </main>
 
 </body>
